src/assets/style/base.scss
html, body {
  background-color: #fff;
  touch-action: manipulation;
  overflow-x: hidden;
  width: 100%;
}

*, *:before, *:after {
  box-sizing: inherit;
}

svg {
  vertical-align: middle;
}

::selection { background: var(--primary-bg); }

